Alignment Bug Fix

--- a/main.css
+++ b/main.css
@@ -189,14 +189,17 @@ body {
     font-weight: 400;
 }
 
+html,body{
+    display: flex;
+    justify-content: center;
+}
+
 #typewriter {
     font-size: 16px;
     font-weight: 300;
     font-family: 'Quicksand';
     position: fixed;
-    left: 50%;
     top: 25%;
-    transform: translate(-50%);
 }
 
 #typewriter:after {
